# Altitude_Transactions

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  auth.py  contacts.py  dashboard.py  documents.py  extractions.py  fields.py  files.py  health.py  review.py  tasks.py  transactions.py
backend/app/core/: config.py  security.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: apply_engine.py  audit.py  checklist.py  deadline_engine.py  deadline_service.py  demo_workflow.py  document_service.py  extraction.py  extraction_schemas.py  extraction_service.py  fixture_provider.py  storage.py  task_service.py  transaction_service.py
backend/app/services/data/: sample_contract_extraction.json
backend/app/tests/: conftest.py  test_deadline_tasks.py  test_review_apply.py  test_transactions.py  test_upload_extract_confirm.py
chats/: chat1.md  chat2.md
docs/: ALTITUDE_DESIGN_SYSTEM.md  ALTITUDE_MOBILE_NATIVE_STRATEGY.md  API_CONTRACTS.md  API_CONTRACT_MOBILE_WEB.md  ARCHITECTURE.md  EXPO_IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  PERFORMANCE.md  SOURCE_MAP.md  UX_UI_ACCESSIBILITY_AUDIT.md  architectural-decisions.md  domain-model.md  extraction-pipeline.md  mcp-plan.md  productionization-roadmap.md  source-truth.md
frontend/: .env.example  package-lock.json  package.json
project/: Altitude.html  data.js  (+4 more)
(+238 files in other folders)
