[project]
name = "altitude-backend"
version = "0.2.0"
description = "Altitude — AI-assisted contract-to-close transaction workflow engine (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.110",
    "sqlmodel>=0.0.16",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "alembic>=1.13",
    "PyJWT>=2.8",
    "bcrypt>=4.1",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
postgres = [
    "psycopg2-binary>=2.9",
]
s3 = [
    "boto3>=1.34",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
